Remote management is very close to reality
